--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -21,8 +21,8 @@
       </button>
       <ul class="dropdown-menu">
         <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To shopping list</a></li>
-        <li><a href="#">Edit recipe</a></li>
-        <li><a href="#">Delete</a></li>
+        <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit recipe</a></li>
+        <li><a style="cursor: pointer;">Delete</a></li>
       </ul>
     </div>
   </div>
